# s3a-15-finance-analyzer

./: pyproject.toml
config/: category_rules.json
data/: finance.db  report_2024.md  sample_bank.csv
fin/: categorizer.py  charts.py  cli.py  db.py  importer.py  models.py  stats.py
fin.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
