[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fin"
version = "0.1.0"
description = "Personal finance analyzer CLI tool"
requires-python = ">=3.9"
dependencies = [
    "pandas>=2.0.0",
    "matplotlib>=3.7.0",
    "click>=8.1.0",
    "rich>=13.0.0",
]

[project.scripts]
fin = "fin.cli:cli"

[tool.setuptools.packages.find]
include = ["fin*"]
